--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "a.js",
   "scripts": {
     "cypress:run": "npx cypress run",
-    "cypress:run:dash": "npx cypress run --record"
+    "cypress:run:dash": "npx cypress run --record  --key <record_key"
   },
   "keywords": [],
   "author": "",
